logs/dag_id=Read_and_load_of_API_to_MySQLDB/run_id=scheduled__2024-02-04T000000+0000/task_id=companies_table/attempt=6.log
[2024-02-15T20:14:41.856+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Read_and_load_of_API_to_MySQLDB.companies_table scheduled__2024-02-04T00:00:00+00:00 [queued]>
[2024-02-15T20:14:41.879+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Read_and_load_of_API_to_MySQLDB.companies_table scheduled__2024-02-04T00:00:00+00:00 [queued]>
[2024-02-15T20:14:41.880+0000] {taskinstance.py:2170} INFO - Starting attempt 6 of 10
[2024-02-15T20:14:41.938+0000] {taskinstance.py:2191} INFO - Executing <Task(_PythonDecoratedOperator): companies_table> on 2024-02-04 00:00:00+00:00
[2024-02-15T20:14:41.948+0000] {standard_task_runner.py:60} INFO - Started process 333 to run task
[2024-02-15T20:14:42.056+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Read_and_load_of_API_to_MySQLDB', 'companies_table', 'scheduled__2024-02-04T00:00:00+00:00', '--job-id', '339', '--raw', '--subdir', 'DAGS_FOLDER/CRM.py', '--cfg-path', '/tmp/tmpmihdf8dt']
[2024-02-15T20:14:42.077+0000] {standard_task_runner.py:88} INFO - Job 339: Subtask companies_table
[2024-02-15T20:14:42.647+0000] {task_command.py:423} INFO - Running <TaskInstance: Read_and_load_of_API_to_MySQLDB.companies_table scheduled__2024-02-04T00:00:00+00:00 [running]> on host 9ed0078b97b9
[2024-02-15T20:14:43.257+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='jmoc' AIRFLOW_CTX_DAG_ID='Read_and_load_of_API_to_MySQLDB' AIRFLOW_CTX_TASK_ID='companies_table' AIRFLOW_CTX_EXECUTION_DATE='2024-02-04T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='6' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-04T00:00:00+00:00'
[2024-02-15T20:14:43.295+0000] {base.py:83} INFO - Using connection ID 'mysql_connection' for task execution.
[2024-02-15T20:14:43.341+0000] {sql.py:450} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS ***_PI.companies(
              id INT AUTO_INCREMENT  PRIMARY KEY NOT NULL,
              name VARCHAR(25) NOT NULL UNIQUE  ,
              catchPhrase VARCHAR(225) NOT NULL,
              bs VARCHAR(50) NOT NULL 
            );
            , parameters: None
[2024-02-15T20:14:43.365+0000] {sql.py:459} INFO - Rows affected: 0
[2024-02-15T20:14:43.420+0000] {base.py:83} INFO - Using connection ID 'postgres_connection' for task execution.
[2024-02-15T20:14:43.436+0000] {sql.py:450} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS <bound method ***_PI.get_name of <helpers.db_object.***_PI object at 0x7f05f7ad06a0>>.companies(
              id BIGSERIAL PRIMARY KEY NOT NULL,
              name VARCHAR(25) NOT NULL UNIQUE  ,
              catchPhrase VARCHAR(225) NOT NULL,
              bs VARCHAR(50) NOT NULL 
            );
            , parameters: None
[2024-02-15T20:14:43.440+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 241, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/CRM.py", line 47, in companies_table
    postgres_hook.run(airflow_PI.companies_c(db.get_name,'postgres'))
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "<"
LINE 2:             CREATE TABLE IF NOT EXISTS <bound method ***...
                                               ^

[2024-02-15T20:14:43.672+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=Read_and_load_of_API_to_MySQLDB, task_id=companies_table, execution_date=20240204T000000, start_date=20240215T201441, end_date=20240215T201443
[2024-02-15T20:14:44.276+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 339 for task companies_table (syntax error at or near "<"
LINE 2:             CREATE TABLE IF NOT EXISTS <bound method ***...
                                               ^
; 333)
[2024-02-15T20:14:44.386+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-15T20:14:44.677+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
